test_programs/compile_failure/noirc_frontend_tests_aliases_self_referring_type_alias_is_not_allowed/src/main.nr

        pub type X = X;

        fn main() {
            let _: X = 1;
        }
      